<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".launch.SigninActivity"
        android:background="@layout/background_color">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="10dp">
            <ImageView
                    android:layout_width="150dp"
                    android:layout_height="142dp"
                    app:srcCompat="@drawable/login"
                    android:id="@+id/signinImageView"

                    android:contentDescription="@string/signin"/>

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:maxLength="12"
                    android:id="@+id/usernameEditText"
                    android:layout_marginTop="20dp"
                    android:hint="@string/usernameHint"
                    android:fontFamily="@font/b_nazanin"
                    android:background="@layout/rounded_border_edittext"
                    android:gravity="center"
                    android:textAlignment="center"
                    android:textSize="19sp"
                    android:digits="@string/englishCharsWithNumbers"/>

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:inputType="textPassword"
                    android:maxLength="12"
                    android:ems="10"
                    android:id="@+id/passwordEditText"
                    android:layout_marginTop="20dp"
                    android:hint="@string/passwordHint"
                    android:fontFamily="@font/b_nazanin"
                    android:background="@layout/rounded_border_edittext"
                    android:gravity="center"
                    android:textAlignment="center"
                    android:textSize="19sp"
                    android:digits="@string/englishCharsWithNumbers"/>

            <Button
                    android:text="@string/signin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/loginButton"
                    android:onClick="signIn"
                    android:layout_marginTop="40dp"
                    android:background="@layout/rounded_border_update_button"
                    android:fontFamily="@font/b_nazanin"
                    android:textSize="19sp"/>

            <TextView
                    android:text="@string/gotosignup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/signupWindowtextView"
                    android:textColor="@android:color/holo_blue_dark"
                    android:linksClickable="true"
                    android:textColorLink="@color/colorAccent"
                    android:textSize="22sp"
                    android:onClick="goSignUpActivity"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/b_nazanin"/>

        </LinearLayout>
    </ScrollView>

   </android.support.constraint.ConstraintLayout>