<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".launch.RegisterHouseActivity"
        android:background="@layout/background_color">

    <ScrollView
            android:scrollbars=""
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
              >

                <LinearLayout
                        android:id="@+id/mainLinearLayout"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:baselineAligned="false">

                    <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="150dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:gravity="center"
                            android:layout_marginRight="2dp"
                            android:layout_marginEnd="2dp">

                        <Spinner
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/sellRentSpinner"
                                />

                        <EditText
                                android:inputType="numberDecimal"
                                android:background="@layout/rounded_border_edittext"
                                android:gravity="center"
                                android:textAlignment="center"
                                android:ems="10"
                                android:hint="@string/houseSize"
                                android:maxLength="6"
                                android:id="@+id/housesizeEditText"
                                android:layout_height="30dp"
                                android:fontFamily="@font/b_nazanin"
                                android:textSize="19sp"
                                android:layout_marginTop="5dp"
                                android:layout_width="match_parent"/>

                        <EditText
                                android:layout_height="30dp"
                                android:inputType="numberDecimal"
                                android:background="@layout/rounded_border_edittext"
                                android:ems="10"
                                android:hint="@string/price"
                                android:maxLength="12"
                                android:id="@+id/priceEditText"
                                android:gravity="center"
                                android:textAlignment="center"
                                android:fontFamily="@font/b_nazanin"
                                android:textSize="19sp"
                                android:layout_marginTop="5dp"
                                android:layout_width="match_parent"/>

                        <AutoCompleteTextView
                                android:layout_height="30dp"
                                android:gravity="center"
                                android:textAlignment="center"
                                android:fontFamily="@font/b_nazanin"
                                android:textSize="19sp"
                                android:background="@layout/rounded_border_edittext"
                                android:digits="@string/farsiChars"
                                android:hint="@string/province"
                                android:id="@+id/provinceCompleteTextView"
                                android:layout_marginTop="5dp"
                                android:layout_width="match_parent"/>

                        <AutoCompleteTextView
                                android:layout_height="30dp"
                                android:gravity="center"
                                android:textAlignment="center"
                                android:id="@+id/cityAutoCompleteTextView"
                                android:background="@layout/rounded_border_edittext"
                                android:digits="@string/farsiChars"
                                android:hint="@string/city"
                                android:layout_marginTop="5dp"
                                android:layout_width="match_parent"/>

                    </LinearLayout>

                    <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="150dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:gravity="center"
                            android:layout_marginLeft="2dp"

                            android:layout_marginStart="2dp">

                        <Spinner
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/housetypeSpinner"

                                />

                        <EditText
                                android:layout_height="30dp"
                                android:inputType="numberDecimal"
                                android:ems="10"
                                android:maxLength="3"
                                android:hint="@string/floorNumber"
                                android:id="@+id/floorNumberEditText"
                                android:gravity="center"
                                android:textAlignment="center"
                                android:fontFamily="@font/b_nazanin"
                                android:textSize="19sp"
                                android:background="@layout/rounded_border_edittext"

                                android:layout_marginTop="5dp"
                                android:layout_width="match_parent"/>

                        <EditText
                                android:inputType="numberDecimal"
                                android:background="@layout/rounded_border_edittext"
                                android:gravity="center"
                                android:textAlignment="center"
                                android:ems="10"
                                android:hint="@string/rentalCost"
                                android:maxLength="12"
                                android:id="@+id/rentalCostEditText"
                                android:layout_height="30dp"
                                android:fontFamily="@font/b_nazanin"
                                android:textSize="19sp"
                                android:layout_marginTop="5dp"
                                android:layout_width="match_parent"/>

                        <EditText
                                android:inputType="numberDecimal"
                                android:background="@layout/rounded_border_edittext"
                                android:gravity="center"
                                android:textAlignment="center"
                                android:ems="10"
                                android:hint="@string/age"
                                android:maxLength="4"
                                android:id="@+id/ageEditText"
                                android:layout_height="30dp"
                                android:fontFamily="@font/b_nazanin"
                                android:textSize="19sp"
                                android:layout_marginTop="5dp"
                                android:layout_width="match_parent"/>

                        <AutoCompleteTextView
                                android:layout_height="30dp"
                                android:gravity="center"
                                android:textAlignment="center"
                                android:background="@layout/rounded_border_edittext"
                                android:id="@+id/countyAutoCompleteTextView"
                                android:digits="@string/farsiChars"
                                android:hint="@string/county"
                                android:layout_marginTop="5dp"
                                android:layout_width="match_parent"/>

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout

                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:id="@+id/addrDescLinearLayout"
                       >

                    <EditText
                            android:layout_width="match_parent"
                            android:layout_height="90dp"
                            android:inputType="textMultiLine"
                            android:background="@layout/rounded_border_edittext"
                            android:gravity="center"
                            android:textAlignment="center"
                            android:ems="10"
                            android:hint="@string/address"
                            android:maxLength="150"
                            android:id="@+id/addressEditText"
                            android:digits="@string/farsiCharsWithNumber"
                            android:fontFamily="@font/b_nazanin"
                            android:textSize="19sp"
                            />

                    <EditText
                            android:layout_width="match_parent"
                            android:layout_height="102dp"
                            android:inputType="textMultiLine"
                            android:background="@layout/rounded_border_edittext"
                            android:gravity="center"
                            android:textAlignment="center"
                            android:ems="10"
                            android:hint="@string/description"
                            android:maxLength="150"
                            android:id="@+id/desciptionEditText"
                            android:digits="@string/farsiCharsWithNumber"
                            android:fontFamily="@font/b_nazanin"
                            android:textSize="19sp"
                            android:layout_marginTop="10dp"/>
                </LinearLayout>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:gravity="center"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp">

                <ImageButton
                    android:id="@+id/addHouseLocationButton"
                    android:layout_width="70dp"
                    android:layout_height="60dp"
                    android:layout_weight="0"
                    android:background="#01ffffff"
                    android:contentDescription="@string/onmap"
                    android:scaleType="fitXY"
                    android:src="@drawable/on_map_icon"
                    android:visibility="invisible" />

                <Button
                        android:text="@string/register"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/registerButton"
                        android:onClick="registerHouse"
                        android:background="@layout/rounded_border_register_button"
                        android:fontFamily="@font/b_nazanin"
                        android:textSize="19sp"
                        android:layout_marginLeft="150dp"
                        android:layout_weight="0"
                        android:layout_marginStart="150dp"/>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>